2002-05-17  Carlos Garnacho Parro  <garparr@teleline.es>

	* service-list.pl.in: added a service list
	* service.pl.in: added new functionality
	* runlevel-conf.in: rewritten from scratch
	* AUTHORS: updated

2002-02-10  Chema Celorio  <chema@celorio.com>

	* Port to the GNOME 2.0 platform

2002-02-10  Chema Celorio  <chema@celorio.com>

	* configure.in : portify AC_INIT and AM_INIT_AUTOMAKE

2002-02-08  Chema Celorio  <chema@celorio.com>

	* configure.in: 0.12.0 here we go
	
2002-01-07  Tambet Ingo  <tambet@ximian.com>

	* dhcpd.pl.in (xst_dhcpd_conf_get_parse_table): Added RH 7.1 to platforms list.

	* dhcpd-conf.in: Ditto.
	(xml_parse): Accept a conditional argument to make debugging nicer.

2002-01-06  Chema Celorio  <chema@celorio.com>

	* tokenizer.pl.in: utility functions to parse/replace config file.
	Please : do not use them yet as they need renaming and the order of the
	parameters are going to chamge

	* dhcpd.pl.in: add to repository

	* xml.pl.in (xst_xml_print_hash): only print the tag if it is not empty

	* util.pl.in (xst_array_find_index): utility function to find the index
	of an array item given the item.

	* dhcpd-conf.in: add dhcpd backend

	* Makefile.am (BACKENDSBODY): add dhcpd.pl.in and dhcpd-conf.in

2002-01-02  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_run): Wrong lowargs reporting. Better
	use scalar than $#.

	* file.pl.in (xst_file_run): was redirecting stderr to /dev/null twice.

	* replace.pl.in (xst_replace_split): minor indentation.

2002-01-02  Tambet Ingo  <tambet@ximian.com>

	* xml.pl.in (xst_xml_scan_make_kid_array): Single quote (') can be used
	as an xml attribute enclosing symbol as well.

2001-12-20  Tambet Ingo  <tambet@ximian.com>

	* service.pl.in (xst_service_sysv_remove_link): Close dir also after
	opening it.
	(xst_service_sysv_set_links_active): Use stricter regexps to remove
	only service we need (xfs vs xfstt).
	(xst_service_sysv_set_links_inactive): Ditto.